--- a/web-deployment.yaml
+++ b/web-deployment.yaml
@@ -5,7 +5,28 @@ metadata:
     app: synergychat-web
   name: synergychat-web
 spec:
-  replicas: 3
+  selector:
+    matchLabels:
+      app: synergychat-web
+  template:
+    metadata:
+      labels:
+        app: synergychat-web
+    spec:
+      containers:
+        - image: bootdotdev/synergychat-web:latest
+          name: synergychat-web
+          resources: {}
+          envFrom:
+            - configMapRef:
+                name: synergychat-web-configmap
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: synergychat-web
+  name: synergychat-web
+spec:
   selector:
     matchLabels:
       app: synergychat-web
