--- a/api-configmap.yaml
+++ b/api-configmap.yaml
@@ -4,5 +4,6 @@ metadata:
   name: synergychat-api-configmap
 data:
   API_PORT: "8080"
-  API_DB_FILEPATH: "/var/lib/synergychat/api/db.json"
+  API_DB_FILEPATH: "/persist/db.json"
+  CRAWLER_BASE_URL: http://synergychat-crawler.crawler.svc.cluster.local:8080
 
