--- a/crawler-service.yaml
+++ b/crawler-service.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: crawler-service 
+  name: crawler-service
+  namespace: crawler
 spec:
   selector:
     app: synergychat-crawler
@@ -9,4 +10,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8080
-  type: ClusterIP
+
